# tsp-acs

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  bayesian_optimization.py  blaze-3.5.tar.gz:Zone.Identifier  generate_dist_matrix.py  generate_dist_matrix_eil76.py  generate_dist_matrix_kroA100.py  mat.mat  out_ch130.tsp  out_d198.tsp  out_eil76.tsp  out_fl1577.tsp  out_kroA100.tsp  out_lin318.tsp  out_pcb442.tsp  out_pr439.tsp  out_rat783.tsp  out_u1060.tsp  resultados_bayes.out  results.csv  run_all.sh
Testing/Temporary/: CTestCostData.txt
headers/: tsp.hpp
implementations/: CMakeLists.txt  Makefile  ant.cpp  main.cpp  node.cpp  results.csv  tsp.cpp  tsp_run  tspstatement.cpp
problems/: ch130.opt.tour  d198.opt.tour  eil76.opt.tour  fl1577.opt.tour  kroA100.opt.tour  lin318.opt.tour  my_test.tsp  pcb442.opt.tour  pr439.opt.tour  rat783.opt.tour  u1060.opt.tour
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  test_ant.cpp  tsp_tst
tests/src/: test_ant.cpp  test_tspstatement.cpp
